--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="shortcut icon" type="image/x-icon" href="assets\img\favicon.ico.png">
 
 <!-- Link to CSS file -->
-<link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
+<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 
 <body>
     <!-- Navigation Bar -->
