--- a/organizers.html
+++ b/organizers.html
@@ -9,7 +9,7 @@
 <link rel="icon" type="image/x-icon" href="/assets\img\favicon.ico.png">
 <link rel="shortcut icon" type="image/x-icon" href="assets\img\favicon.ico.png">
 <!-- Link to CSS file -->
-<link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
+<link rel="stylesheet" type="text/css" href="main.css">
 <body>
     <header class="navbar">
         <!-- Logo Section -->
