--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <!-- Logo -->
-        <a href="index.html">
+        <a href="index">
             <img src="assets/img/logo_25.png" alt="Logo" class="logo">
         </a>
         
         <!-- Navigation Links -->
         <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="sponsors.html">Sponsors</a></li>
-            <li><a href="organizers.html">Organizers</a></li>
+            <li><a href="index">Home</a></li>
+            <li><a href="sponsors">Sponsors</a></li>
+            <li><a href="organizers">Organizers</a></li>
         </ul>
         <div class="hamburger" onclick="toggleMenu()">
             &#9776; <!-- Unicode for hamburger icon -->
