--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 <title></title>
 
 <link rel="canonical" href="http://localhost:4000//">
-<link rel="icon" type="image/x-icon" href="/assets\img\favicon.ico.png">
-<link rel="shortcut icon" type="image/x-icon" href="assets\img\favicon.ico.png">
+<link rel="icon" type="image/x-icon" href="/assets\img\favicon.png">
+<link rel="shortcut icon" type="image/x-icon" href="assets\img\favicon.png">
 
 <!-- Link to CSS file -->
-<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+<link rel="stylesheet" type="text/css" href="assets\css\styles.css">
 
+
+<header>
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar">
@@ -37,6 +39,8 @@
     <script src="/assets%5Cjs%5Cfunctions.js"></script>
 </header>
   <!-- Main content -->
+  <link rel="stylesheet" type="text/css" href="assets\css\styles.css">
+
    <div class="grid-container">
     <div class="main-content">
     <div class="hero">
