--- a/organizers.html
+++ b/organizers.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sponsors</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets\css\styles.css">
 </head>
-<link rel="icon" type="image/x-icon" href="/assets\img\favicon.ico.png">
-<link rel="shortcut icon" type="image/x-icon" href="assets\img\favicon.ico.png">
+<link rel="icon" type="image/x-icon" href="/assets\img\favicon.png">
+<link rel="shortcut icon" type="image/x-icon" href="assets\img\favicon.png">
 <!-- Link to CSS file -->
-<link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" type="text/css" href="styles.css">
 <body>
     <header class="navbar">
         <!-- Logo Section -->
