--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="shortcut icon" type="image/x-icon" href="assets\img\favicon.png">
 
 <!-- Link to CSS file -->
-<link rel="stylesheet" type="text/css" href="assets\css\styles.css">
+<link rel="stylesheet" type="text/css" href="main.css">
 
 
 <header>
@@ -27,9 +27,9 @@
         
         <!-- Navigation Links -->
         <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="sponsors.html">Sponsors</a></li>
-            <li><a href="organizers.html">Organizers</a></li>
+            <li><a href="index">Home</a></li>
+            <li><a href="sponsors">Sponsors</a></li>
+            <li><a href="organizers">Organizers</a></li>
         </ul>
         <div class="hamburger" onclick="toggleMenu()">
             &#9776; <!-- Unicode for hamburger icon -->
@@ -46,7 +46,7 @@
     <div class="hero">
         <img src="assets\img\Banner_25.webp" alt="Banner Image">
         <div class="content">
-            <h1 class="fancy-heading">Welcome to IEEE ISMAR 2025</h1>
+            <h1 class="fancy-heading">IEEE ISMAR 2025</h1>
             <h2 class="fancy-subheading">Daejeon, South Korea   Oct. 8 - Oct. 12 2025</h2>
 
             <section class="description">
