Sponsors page hidden

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
         <!-- Navigation Links -->
         <ul class="nav-links">
             <li><a href="index">Home</a></li>
-            <li><a href="sponsors">Sponsors</a></li>
             <li><a href="organizers">Organizers</a></li>
         </ul>
         <div class="hamburger" onclick="toggleMenu()">
@@ -50,9 +49,7 @@
             <h2 class="fancy-subheading">Daejeon, South Korea   Oct. 8 - Oct. 12 2025</h2>
 
             <section class="description">
-                <p>IEEE International Symposium on Mixed and Augmented Reality (ISMAR) is the premier conference for Augmented Reality (AR), Mixed Reality (MR) and Virtual Reality (VR), which attracts the world’s leading researchers from both academia and industry. ISMAR explores the advances in commercial and research activities related to AR, MR, and VR by continuing to expand its scope over the past several years. The conference will include two days of workshops, tutorials, and contests and three days of scientific papers, posters, and demonstration presentations. In addition, exhibitions will be arranged to promote the interactions and exchange between industry and academia.
-              
-              ISMAR 2025 will be hosted in a hybrid mode! We look forward to seeing all of you at the conference.</p>
+                <p>IEEE International Symposium on Mixed and Augmented Reality (ISMAR) is the premier conference for Augmented Reality (AR), Mixed Reality (MR) and Virtual Reality (VR), which attracts the world’s leading researchers from both academia and industry. ISMAR explores the advances in commercial and research activities related to AR, MR, and VR by continuing to expand its scope over the past several years. The conference will include two days of workshops, tutorials, and contests and three days of scientific papers, posters, and demonstration presentations. In addition, exhibitions will be arranged to promote the interactions and exchange between industry and academia.</p>
 
               <h2 class="important-dates-title">Important Dates</h2>
 
