--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    <div class="grid-container">
     <div class="main-content">
     <div class="hero">
-        <img src="assets\img\Banner_25.webp" alt="Banner Image">
+        <img src="assets\img\ISMAR_Banner_2025.webp" alt="Banner Image">
         <div class="content">
             <h1 class="fancy-heading">IEEE ISMAR 2025</h1>
             <h2 class="fancy-subheading">Daejeon, South Korea   Oct. 8 - Oct. 12 2025</h2>
