--- a/index.html
+++ b/index.html
@@ -6,23 +6,22 @@
 <meta name="IEEE ISMAR 2025" content="Your Name"> 
 <meta name="keywords" content="IEEE, ISMAR, IEEE ISMAR 2025, IEEE ISMAR, Augmented Reality, Mixed Reality"> <!-- relevant keywords -->
 
-<title></title>
-
 <link rel="canonical" href="http://localhost:4000//">
 <link rel="icon" type="image/x-icon" href="/assets\img\favicon.png">
 <link rel="shortcut icon" type="image/x-icon" href="assets\img\favicon.png">
 
 <!-- Link to CSS file -->
 <link rel="stylesheet" type="text/css" href="main.css">
-
-
-<header>
 <body>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
+<head>
+
     <!-- Navigation Bar -->
     <nav class="navbar">
         <!-- Logo -->
         <a href="index">
-            <img src="assets/img/logo_25.png" alt="Logo" class="logo">
+            <img src="assets\img\logo_25.png" alt="Logo" class="logo">
         </a>
         
         <!-- Navigation Links -->
@@ -34,9 +33,9 @@
             &#9776; <!-- Unicode for hamburger icon -->
         </div>
     </nav>
-    
+
     <script src="/assets%5Cjs%5Cfunctions.js"></script>
-</header>
+</head>
   <!-- Main content -->
   <link rel="stylesheet" type="text/css" href="assets\css\styles.css">
 
@@ -81,6 +80,11 @@
 <footer>
     IEEE ISMAR 2025 | Daejeon, South Korea | October 2025
 </footer>
+<!-- Bootstrap JS, Popper.js, and jQuery -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
 </body>
 <script>
     function toggleMenu() {
