--- a/organizers.html
+++ b/organizers.html
@@ -9,7 +9,7 @@
 <link rel="shortcut icon" type="image/x-icon" href="assets\img\favicon.png">
 
 <!-- Link to CSS file -->
-<link rel="stylesheet" type="text/css" href="styles.css">
+<link rel="stylesheet" type="text/css" href="main.css">
 <body>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
@@ -38,6 +38,7 @@
     </head>
     
     </script>
+    <link rel="stylesheet" type="text/css" href="assets\css\styles.css">
 
         <div class="chairs-container">
             <div class="chairs-category">
@@ -237,14 +238,17 @@
         <footer>
             IEEE ISMAR 2025 | Daejeon, South Korea | October 2025
         </footer>
+        <!-- Bootstrap JS, Popper.js, and jQuery -->
+
         <script>
             function toggleMenu() {
                 const navLinks = document.querySelector('.nav-links');
                 navLinks.classList.toggle('active');
             }
-         <!-- Bootstrap JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+        </script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
 </body>
 </html>
