--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"><meta charset="utf-8">
+<head>
 <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="IEEE ISMAR 2025" content="Your Name"> 
@@ -11,11 +12,10 @@
 
 <!-- Link to CSS file -->
 <link rel="stylesheet" type="text/css" href="main.css">
-<body>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
-<head>
-
+</head>
+<body>
     <!-- Navigation Bar -->
     <nav class="navbar">
         <!-- Logo -->
@@ -34,14 +34,14 @@
     </nav>
 
     <script src="/assets%5Cjs%5Cfunctions.js"></script>
-</head>
+    
   <!-- Main content -->
   <link rel="stylesheet" type="text/css" href="assets\css\styles.css">
 
    <div class="grid-container">
     <div class="main-content">
     <div class="hero">
-        <img src="assets\img\ISMAR_2025_Banner.jpg" alt="Banner Image">
+        <img src="assets/img/ISMAR_2025_Banner.jpg" alt="Banner Image" class="hero-banner">
         <div class="content">
             <h1 class="fancy-heading">IEEE ISMAR 2025</h1>
             <h2 class="fancy-subheading">Daejeon, South Korea   Oct. 8 - Oct. 12 2025</h2>
