--- a/organizers.html
+++ b/organizers.html
@@ -33,7 +33,7 @@
 
         <script src="/assets%5Cjs%5Cfunctions.js"></script>
     </header>
-        <div class="main-content">
+        <div class="organizers-container">
         <h2>Organizers</h2>
     </head>
     
@@ -107,7 +107,7 @@
             <div class="chairs-category">
                 <h3>Web Chairs</h3>
                 <div class="chairs">
-                    <p>Seungwon Kim, JNU</p>
+                    <p>Seungwon Kim, Chonnam National University</p>
                     <p>Seungwoo Je, SUSTech</p>
                 </div>
             </div>
@@ -179,7 +179,7 @@
             <div class="chairs-category">
                 <h3>Industrial Exhibition & Sponsorship Chairs</h3>
                 <div class="chairs">
-                    <p>Choonsung Shin, JNU</p>
+                    <p>Choonsung Shin, Chonnam National University</p>
                     <p>Kwang-Soon Choi, KETI</p>
                     <p>Wonki Hong, KEA</p>
                     <p>Il Yeo, Apple</p>
@@ -214,9 +214,9 @@
             <div class="chairs-category">
                 <h3>Social Event Chairs</h3>
                 <div class="chairs">
-                    <p>Dooyoung Kang, KAIST ARRC</p>
-                    <p>Boram Yoon, KAIST ARRC</p>
-                    <p>Hyunjin Lee, KAIST ARRC</p>
+                    <p>Dooyoung Kang, KAIST</p>
+                    <p>Boram Yoon, KAIST</p>
+                    <p>Hyunjin Lee, KAIST</p>
                 </div>
             </div>
         
