--- a/index.html
+++ b/index.html
@@ -41,13 +41,14 @@
    <div class="grid-container">
     <div class="main-content">
     <div class="hero">
-        <img src="assets/img/ISMAR_2025_Banner.jpg" alt="Banner Image" class="hero-banner">
+        <img src="assets\img\logo_25.png" alt="Banner Image" class="hero-banner">
         <div class="content">
             <h1 class="fancy-heading">IEEE ISMAR 2025</h1>
             <h2 class="fancy-subheading">Daejeon, South Korea   Oct. 8 - Oct. 12 2025</h2>
 
             <section class="description">
-                <p>IEEE International Symposium on Mixed and Augmented Reality (ISMAR) is the premier conference for Augmented Reality (AR), Mixed Reality (MR) and Virtual Reality (VR), which attracts the world’s leading researchers from both academia and industry. ISMAR explores the advances in commercial and research activities related to AR, MR, and VR by continuing to expand its scope over the past several years. The conference will include two days of workshops, tutorials, and contests and three days of scientific papers, posters, and demonstration presentations. In addition, exhibitions will be arranged to promote the interactions and exchange between industry and academia.</p>
+                <p>IEEE International Symposium on Mixed and Augmented Reality (ISMAR) is the premier conference for Augmented Reality (AR), Mixed Reality (MR) and Virtual Reality (VR), which attracts the world’s leading researchers from both academia and industry. 
+                    ISMAR explores the advances in commercial and research activities related to AR, MR, and VR by continuing to expand its scope over the past several years.</p>
 
               <h2 class="important-dates-title">Important Dates</h2>
 
