--- a/index.html
+++ b/index.html
@@ -36,7 +36,19 @@
    <div class="grid-container">
     <div class="main-content">
     <div class="hero">
-        <img src="assets\img\logo_25.png" alt="Banner Image" class="hero-banner">
+        <div class="video-container">
+            <!-- YouTube Video Embed -->
+            <iframe class="video" width="560" height="315" 
+                    src="https://www.youtube.com/embed/-0LHggNGP4A?rel=0&controls=1" 
+                    title="YouTube video player" frameborder="0" 
+                    allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        
+            <!-- Convention center aligned to the left -->
+            <div class="venue-link">
+                <a>Venue: </a><a href=" https://english.visitkorea.or.kr/svc/contents/contentsView.do?vcontsId=82379&menuSn=351" target="_blank">Daejeon Convention Center (DCC)</a>
+            </div>
+        </div>
+        
         <div class="content">
             <h1 class="fancy-heading">IEEE ISMAR 2025</h1>
             <h2 class="fancy-subheading">Daejeon, South Korea   Oct. 8 - Oct. 12 2025</h2>
