--- a/index.html
+++ b/index.html
@@ -43,9 +43,13 @@
                     title="YouTube video player" frameborder="0" 
                     allow="autoplay; encrypted-media" allowfullscreen></iframe>
         
-            <!-- Convention center aligned to the left -->
+            <!-- Venu link -->
             <div class="venue-link">
-                <a>Venue: </a><a href=" https://english.visitkorea.or.kr/svc/contents/contentsView.do?vcontsId=82379&menuSn=351" target="_blank">Daejeon Convention Center (DCC)</a>
+                <a class="venue-label">Venue:</a>
+                <a href="https://english.visitkorea.or.kr/svc/contents/contentsView.do?vcontsId=82379&menuSn=351" 
+                   target="_blank" class="venue-link-text">
+                   Daejeon Convention Center (DCC)
+                </a>
             </div>
         </div>
         
