--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
                 <a class="venue-label">Venue:</a>
                 <a href="https://english.visitkorea.or.kr/svc/contents/contentsView.do?vcontsId=82379&menuSn=351" 
                    target="_blank" class="venue-link-text">
-                   Daejeon Convention Center (DCC)
+                   <strong>Daejeon Convention Center (DCC)</strong>
                 </a>
             </div>
         </div>
         
         <div class="content">
-            <h1 class="fancy-heading">IEEE ISMAR 2025</h1>
-            <h2 class="fancy-subheading">Daejeon, South Korea   Oct. 8 - Oct. 12 2025</h2>
+            <h1 class="heading">IEEE ISMAR 2025</h1>
+            <h2 class="subheading">Daejeon, South Korea   Oct. 8 - Oct. 12 2025</h2>
 
             <section class="description">
                 <p>IEEE International Symposium on Mixed and Augmented Reality (ISMAR) is the premier conference for Augmented Reality (AR), Mixed Reality (MR) and Virtual Reality (VR), which attracts the world’s leading researchers from both academia and industry. 
