--- a/index.html
+++ b/index.html
@@ -39,29 +39,9 @@
    <div class="grid-container">
     <div class="main-content">
     <div class="hero">
-        <div class="video-container">
-            <!-- YouTube Video Embed -->
-            <iframe class="video" width="560" height="315" 
-                    src="https://www.youtube.com/embed/-0LHggNGP4A?rel=0&controls=1" 
-                    title="YouTube video player" frameborder="0" 
-                    allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        
-            <!-- Container for venue text and link -->
-            <div class="venue-container">
-                <span class="venue-text">Venue: </span>
-                <a href="https://english.visitkorea.or.kr/svc/contents/contentsView.do?vcontsId=82379&menuSn=351" target="_blank" class="link-with-icon">
-                    Daejeon Convention Center (DCC)
-                    <!-- SVG icon similar to the provided design -->
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
-                        <path d="M13 3H4a1 1 0 0 0-1 1v16a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-9h-2v8H5V5h8V3zm6.707 0H14v2h4.586l-9.293 9.293 1.414 1.414L20 6.414V11h2V3.707a1 1 0 0 0-1-1z" fill="currentColor"/>
-                    </svg>
-                </a>
-            </div>
-        </div>
-        
 
         <div class="content">
-            <h1 class="heading">IEEE ISMAR 2025</h1>
+            <h1 class="heading">WELCOME TO IEEE ISMAR 2025</h1>
             <h2 class="subheading">Daejeon, South Korea   Oct. 8 - Oct. 12 2025</h2>
 
             <section class="description">
@@ -88,6 +68,26 @@
         </tr>
     </tbody>
 </table>
+
+<div class="video-container">
+    <!-- YouTube Video Embed -->
+    <iframe class="video" width="560" height="315" 
+            src="https://www.youtube.com/embed/-0LHggNGP4A?rel=0&controls=1" 
+            title="YouTube video player" frameborder="0" 
+            allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+    <!-- Container for venue text and link -->
+    <div class="venue-container">
+        <span class="venue-text">Venue: </span>
+        <a href="https://english.visitkorea.or.kr/svc/contents/contentsView.do?vcontsId=82379&menuSn=351" target="_blank" class="link-with-icon">
+            Daejeon Convention Center (DCC)
+            <!-- SVG icon similar to the provided design -->
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
+                <path d="M13 3H4a1 1 0 0 0-1 1v16a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-9h-2v8H5V5h8V3zm6.707 0H14v2h4.586l-9.293 9.293 1.414 1.414L20 6.414V11h2V3.707a1 1 0 0 0-1-1z" fill="currentColor"/>
+            </svg>
+        </a>
+    </div>
+</div>
 
               </section>
         </div>
