--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is the offical IEEE International Symposium on Mixed and Augmented Reality website">
+    <meta name="author" content="IEEEISMARPublicity">
+    <meta name="keywords" content="IEEEISMAR, ISMAR, IEEE International Symposium on Mixed and Augmented Reality, Augmented Reality, Mixed Reality">
+   
     <meta http-equiv="refresh" content="0;url=/2025/index.html">
     <title>Redirecting...</title>
 </head>
